# GranblueParty

./: MONETIZATION.md  PRODUCTION_SETUP.md  gbf_backup.sql  sync-db.ps1  sync-db.sh
.github/workflows/: sync-database.yml
API/: package-lock.json  package.json
API/scripts/: generate-config.js
Frontend/: package-lock.json  package.json  server.js  webpack.static.config.js
Frontend/dist_new/: account-296e1e44fcbfd2cb3cb3.js  builder-a816bc0de962020f077b.js  calcbullets-4506d83e444bda269265.js  calcdread-266b7c826a8d7305834a.js  calcevent-3def62ab01da1c5aa5cd.js  collection-61898542a3ffe3394fb7.js  cookies-5a609fd4dc7ade070952.js  daily-3e886564f6373db4a807.js  error-193396de6087d947f83d.js  eternal-65bc4ea640eaf5c389b4.js  evoker-9038865d1bc5e6b6d6fa.js  friend-21ed0854c1f314051e15.js  gw-cdf27340e842efa51dc7.js  index-097422da8d545f1f6cb0.js  index.html  main-00b3cb61b3a942e0e0dd.css  (+15 more)
WikiParser/: Sele_test.py  UNDETECTED_CHROME_BACKUP.md  bullets.py  check_tables.py  parse.py  pyproject.toml  update.sh
WikiParser/config/: defines.py  wikirequest.py
WikiParser/data/: cache_revisions.json  chara.images  chara_small.images  characters.json  characters_category.json  class_skill.json  summon.images  summon_battle.preview  summon_small.images  summons_category.json  weapons.images
WikiParser/db/: Character.csv  CharacterOugi.csv  CharacterSkill.csv  Class.csv  ClassSkill.csv  Class_ClassSkill.csv  DrawType.csv  Skin_Character.csv  Summon.csv  SummonAura.csv  SummonCall.csv  Weapon.csv  WeaponSpecialty.csv  Weapon_Ougi.csv  Weapon_Skill.csv  Weapon_SkillData.csv
(+16 files in other folders)
